# internalTools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
internalTools/: __init__.py
internalTools/modeling/: __init__.py  functions.py  ner_model.py  qa_model.py  zero_shot_model.py
internalTools/processing/text/: __init__.py  constants.py  functions.py
internalTools/testing/: testing.py
