[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internalTools"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers==3.0.1",
    "nltk==3.8.1",
    "ftfy==6.2.3"
]
authors = [
  {name = "Abdelrahman Yaghi", email = "ayaghi@avertra.com"},
  {name = "Omar Quishawi", email = "oquishawi@avertra.com"}
]
description = "A Library containing a set of useful internal tools for ML and AI development."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
[project.urls]
Homepage = "https://pypi.org/project/internalTools/"
Repository = "https://github.com/AbdelRahmanYaghi/internalTools"
Issues = "https://github.com/AbdelRahmanYaghi/internalTools/issues"
